--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -71,7 +71,8 @@ jobs:
           done
 
           echo "files without license: $no_of_files_without_license"
-          if $no_of_files_without_license=0; then
+
+          if [[ $no_of_files_without_license -gt 0 ]]; then
             exit 1
           fi
 
