--- a/.github/workflows/emulator.yml
+++ b/.github/workflows/emulator.yml
@@ -63,6 +63,8 @@ jobs:
           touch app/emulator.log
           chmod 777 app/emulator.log
           adb logcat com.example.breach.app >> app/emulator.log &
+          ./gradlew installDebug
+          ./gradlew :app:installDebugAndroidTest
           adb shell am instrument -w -e class com.example.breach.ExampleInstrumentedTest com.example.breach.app.test/androidx.test.runner.AndroidJUnitRunner
           # sleep 30
 
