--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -45,11 +45,11 @@ jobs:
 
             # Construct the find command with excluded paths
             find_command="find . -type f -name \"$key\""
-            exclude_expr="("
+            exclude_expr="\("
 
             # Append each excluded path to the expression
             for path in "${excluded_paths[@]}"; do
-              exclude_expr+=" -path \"*$path*\" -o"
+              exclude_expr+=" -path \"*/$path*/\" -o"
             done
 
             # Remove the last -o
