--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -49,7 +49,7 @@ jobs:
 
             # Append each excluded path to the expression
             for path in "${excluded_paths[@]}"; do
-              exclude_expr+=" -path \"*/$path*/\" -o"
+              exclude_expr+=" -path \"*/$path/*\" -o"
             done
 
             # Remove the last -o
@@ -61,7 +61,7 @@ jobs:
             # Append the exclusion expression to the find command
             find_command+=" -not $exclude_expr"
 
-            "final find command: $find_command"
+            # "final find command: $find_command"
 
             # Execute the find command
             files=$(eval "$find_command")
