--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -77,7 +77,7 @@ jobs:
             done
           done
 
-          If there are files without a license, fail the workflow
+          # If there are files without a license, fail the workflow
           if $has_files_without_license; then
             echo "Failing this workflow as there is atleast one file present without license."
             exit 1
