--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -34,14 +34,14 @@ jobs:
           # Initialize a variable to keep track of whether there are files without a license
           has_files_without_license=false
 
-          excluded_paths=$(jq -r '.ignore[]' <<< "$content")
+          excluded_paths=$(jq -r '.ignore | .[]' <<< "$content")
           echo "ignore: $excluded_paths"
 
           # Iterate over each .yml file and check for the presence of key2_value
           for key in "${keys[@]}"; do
 
             # Read the list of excluded paths from the JSON content
-            # excluded_paths=($(jq -r '.ignore[]' <<< "$content"))
+            excluded_paths=($(jq -r '.ignore[]' <<< "$content"))
 
             # Construct the find command with excluded paths
             find_command="find . -type f -name \"$key\""
