--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -30,6 +30,8 @@ jobs:
           # Read the list of excluded paths from the JSON content
           excluded_paths=($(jq -r '.ignore[]' <<< "$content"))
 
+          echo "excluded paths: $excluded_paths"
+
           # Iterate over each type of file and check for the presence of license
           for key in "${keys[@]}"; do
           
