--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -41,6 +41,7 @@ jobs:
 
             # Append each excluded path to the expression
             for path in "${excluded_paths[@]}"; do
+              echo "excluded_path: $path"
               exclude_expr+=" -path \"*/$path*\" -o"
             done
 
