--- a/.github/workflows/alternate_license.yml
+++ b/.github/workflows/alternate_license.yml
@@ -31,10 +31,11 @@ jobs:
           excluded_paths=($(jq -r '.ignore[]' <<< "$content"))
 
           echo "excluded paths: $excluded_paths"
+          ehco "keys: $keys"
 
           # Iterate over each type of file and check for the presence of license
           for key in "${keys[@]}"; do
-            
+            echo "key: $key"
             files=$(find . -type f -name "$key")
 
             echo "files: $files"
