--- a/.github/workflows/alternate_license.yml
+++ b/.github/workflows/alternate_license.yml
@@ -45,7 +45,8 @@ jobs:
             # Exclude files matching the ignored paths
             excluded_files=()
             for path in "${excluded_paths[@]}"; do
-              excluded_files+=$(find . -type f -name "*.$key" -path "*/$path*")
+              find . -type f -name "$key" -path "*/$path*"
+              excluded_files+=$(find . -type f -name "$key" -path "*/$path*")
             done
 
             echo "excluded files: $excluded_files /n"
