--- a/.github/workflows/alternate_license.yml
+++ b/.github/workflows/alternate_license.yml
@@ -14,7 +14,6 @@ jobs:
       - name: get json
         run: |
           content=$(cat .licenserc.json)
-          echo "content: $content"
 
           # Initialize an empty array to store the keys
           keys=()
@@ -43,6 +42,12 @@ jobs:
             done
             
             for file in $files; do
+
+              # Don't consider 'ignore' key for license checking
+              if [[ "$key" == "ignore" ]]; then
+                echo "continued!"
+                continue
+              fi
 
               # Use grep to check if the file is in the excluded files list
               if grep -qF "$file" <<< "${excluded_files[*]}"; then
