--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -11,69 +11,72 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: get json
-        run: |
-          content=$(cat .licenserc.json)
+      - name: Check license
+        uses: ./.github/actions/check_license
 
-          # Initialize an empty array to store the keys
-          keys=()
+      # - name: get json
+      #   run: |
+      #     content=$(cat .licenserc.json)
 
-          # Extract keys from the JSON object and append them to the array
-          while IFS= read -r key; do
-            keys+=("$key")
-          done < <(jq -r 'keys | .[]' <<< "$content")
+      #     # Initialize an empty array to store the keys
+      #     keys=()
 
-          # Initialize a variable to keep track of whether there are files without a license
-          has_files_without_license=false
+      #     # Extract keys from the JSON object and append them to the array
+      #     while IFS= read -r key; do
+      #       keys+=("$key")
+      #     done < <(jq -r 'keys | .[]' <<< "$content")
 
-          # Read the list of excluded paths from the JSON content
-          excluded_paths=($(jq -r '.ignore[]' <<< "$content"))
+      #     # Initialize a variable to keep track of whether there are files without a license
+      #     has_files_without_license=false
 
-          # Iterate over each type of file and check for the presence of license
-          for key in "${keys[@]}"; do
+      #     # Read the list of excluded paths from the JSON content
+      #     excluded_paths=($(jq -r '.ignore[]' <<< "$content"))
 
-            # Don't consider 'ignore' key for license checking
-            if [[ "$key" == "ignore" ]]; then
-              echo "continued!"
-              continue
-            fi
+      #     # Iterate over each type of file and check for the presence of license
+      #     for key in "${keys[@]}"; do
+
+      #       # Don't consider 'ignore' key for license checking
+      #       if [[ "$key" == "ignore" ]]; then
+      #         echo "continued!"
+      #         continue
+      #       fi
             
-            # Construct the find command with excluded paths
-            find_command="find . -type f -name \"$key\""
-            exclude_expr="\("
+      #       # Construct the find command with excluded paths
+      #       find_command="find . -type f -name \"$key\""
+      #       exclude_expr="\("
 
-            # Append each excluded path to the expression
-            for path in "${excluded_paths[@]}"; do
-              exclude_expr+=" -path \"*/$path*\" -o"
-            done
+      #       # Append each excluded path to the expression
+      #       for path in "${excluded_paths[@]}"; do
+      #         exclude_expr+=" -path \"*/$path*\" -o"
+      #       done
 
-            # Remove the last -o
-            exclude_expr=${exclude_expr::-3}
-            exclude_expr+=" \)"
+      #       # Remove the last -o
+      #       exclude_expr=${exclude_expr::-3}
+      #       exclude_expr+=" \)"
 
-            # Append the exclusion expression to the find command
-            find_command+=" -not $exclude_expr"
+      #       # Append the exclusion expression to the find command
+      #       find_command+=" -not $exclude_expr"
 
-            # Execute the find command
-            files=$(eval "$find_command")
+      #       # Execute the find command
+      #       files=$(eval "$find_command")
             
-            # files=$(find . -type f -name "$key" -not \( -path "*/test/*" -path "*/app/*" \))
+      #       # files=$(find . -type f -name "$key" -not \( -path "*/test/*" -path "*/app/*" \))
             
-            value=$(echo "$content" | jq -r --arg key "$key" '.[$key]')
+      #       value=$(echo "$content" | jq -r --arg key "$key" '.[$key]')
             
-            for file in $files; do
-              if grep -qF "$value" "$file"; then
-                echo "$file ✅"
-              else
-                has_files_without_license=true
-                echo "$file ❌ missing copyright!"
-              fi
-            done
-          done
+      #       for file in $files; do
+      #         if grep -qF "$value" "$file"; then
+      #           echo "$file ✅"
+      #         else
+      #           has_files_without_license=true
+      #           echo "$file ❌ missing copyright!"
+      #         fi
+      #       done
+      #     done
 
-          # If there are files without a license, fail the workflow
-          if $has_files_without_license; then
-            echo "Failing this workflow as there is atleast one file present without license."
-            exit 1
-          fi
-        shell: bash
+      #     # If there are files without a license, fail the workflow
+      #     if $has_files_without_license; then
+      #       echo "Failing this workflow as there is atleast one file present without license."
+      #       exit 1
+      #     fi
+      #   shell: bash
