--- a/.github/workflows/license_check.yml
+++ b/.github/workflows/license_check.yml
@@ -1,10 +1,7 @@
 name: license check
 
 on: 
-  push:
-    branches:
-      - '*'
-  pull_request:
+  workflow_dispatch:
       
 jobs:
   license-check:
