--- a/.github/actions/check_license/action.yml
+++ b/.github/actions/check_license/action.yml
@@ -64,10 +64,10 @@ runs:
             
           for file in $files; do
             if grep -qF "$value" "$file"; then
-              echo -e "$file ✅ ... ${GREEN}ok${NC}"
+              echo -e "$file ... ${GREEN}ok${NC}"
             else
               has_files_without_license=true
-              echo -e "$file ❌ ${RED}missing copyright!${NC}"
+              echo -e "$file ${RED}missing copyright!${NC}"
             fi
           done
         done
