--- a/.github/workflows/emulator.yml
+++ b/.github/workflows/emulator.yml
@@ -79,7 +79,7 @@ jobs:
           ./gradlew installDebug
           ./gradlew :app:installDebugAndroidTest
           adb shell am instrument -w -e class com.example.breach.ExampleInstrumentedTest com.example.breach.app.test/androidx.test.runner.AndroidJUnitRunner
-          # sleep 30
+          sleep 30
 
       - name: Upload logs
         uses: actions/upload-artifact@v2
