--- a/.github/workflows/emulator.yml
+++ b/.github/workflows/emulator.yml
@@ -78,6 +78,7 @@ jobs:
           adb logcat com.example.breach.app >> app/emulator.log &
           ./gradlew installDebug
           ./gradlew :app:installDebugAndroidTest
+          adb shell pm list instrumentation
           adb shell am instrument -w -e class com.example.breach.ExampleInstrumentedTest com.example.breach.app.test/androidx.test.runner.AndroidJUnitRunner
           sleep 30
 
