--- a/.github/workflows/emulator.yml
+++ b/.github/workflows/emulator.yml
@@ -67,7 +67,7 @@ jobs:
         run: |
           apk_path=$(find . -type f -and -path '*debug.apk')
           echo $apk_path
-          adb shell pm uninstall com.example.breach
+          # adb shell pm uninstall com.example.breach
           adb -s emulator-5554 install /Users/runner/work/breach/breach/app/build/outputs/apk/debug/app-debug.apk
 
 
@@ -80,8 +80,9 @@ jobs:
           ./gradlew installDebug
           ./gradlew :app:installDebugAndroidTest
           adb shell pm list instrumentation
-          adb shell am instrument -w -e class com.example.breach.ExampleInstrumentedTest com.example.breach.app.test/androidx.test.runner.AndroidJUnitRunner
+          # adb shell am instrument -w -e class com.example.breach.ExampleInstrumentedTest com.example.breach.app.test/androidx.test.runner.AndroidJUnitRunner
           sleep 30
+          adb shell pm uninstall com.example.breach
 
       - name: Upload logs
         uses: actions/upload-artifact@v2
