--- a/.github/workflows/emulator.yml
+++ b/.github/workflows/emulator.yml
@@ -80,12 +80,12 @@ jobs:
           ./gradlew installDebug
           ./gradlew :app:installDebugAndroidTest
           adb shell pm list instrumentation
-          # adb shell am instrument -w -e class com.example.breach.ExampleInstrumentedTest com.example.breach.app.test/androidx.test.runner.AndroidJUnitRunner
+          adb shell am instrument -w -e class com.example.breach.ExampleInstrumentedTest com.example.breach.app.test/androidx.test.runner.AndroidJUnitRunner
           sleep 30
           adb shell pm uninstall com.example.breach
 
-      - name: Upload logs
-        uses: actions/upload-artifact@v2
-        with:
-          name: logs
-          path: app/emulator.log
+      # - name: Upload logs
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: logs
+      #     path: app/emulator.log
