--- a/.github/workflows/emulator.yml
+++ b/.github/workflows/emulator.yml
@@ -84,8 +84,8 @@ jobs:
           sleep 31
           adb shell pm uninstall com.example.breach
 
-      # - name: Upload logs
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: logs
-      #     path: app/emulator.log
+      - name: Upload logs
+        uses: actions/upload-artifact@v2
+        with:
+          name: logs
+          path: app/emulator.log
