--- a/.github/workflows/emulator.yml
+++ b/.github/workflows/emulator.yml
@@ -81,11 +81,14 @@ jobs:
           ./gradlew :app:installDebugAndroidTest
           adb shell pm list instrumentation
           adb shell am instrument -w -e class com.example.breach.ExampleInstrumentedTest com.example.breach.test/androidx.test.runner.AndroidJUnitRunner
-          sleep 31
-          adb shell pm uninstall com.example.breach
+          sleep 30
 
       - name: Upload logs
         uses: actions/upload-artifact@v2
         with:
           name: logs
           path: app/emulator.log
+
+      - name: Uninstall the app
+        run: |
+          adb shell pm uninstall com.example.breach
