--- a/.github/workflows/emulator.yml
+++ b/.github/workflows/emulator.yml
@@ -81,8 +81,7 @@ jobs:
           ./gradlew :app:installDebugAndroidTest
           adb shell pm list instrumentation
           adb shell am instrument -w -e class com.example.breach.ExampleInstrumentedTest com.example.breach.test/androidx.test.runner.AndroidJUnitRunner
-          sleep 30
-          ls -l app/emulator.log
+          # sleep 30
 
       - name: Upload logs
         uses: actions/upload-artifact@v2
