--- a/.github/actions/launch_emulator/action.yml
+++ b/.github/actions/launch_emulator/action.yml
@@ -67,17 +67,7 @@ runs:
 
 
       - name: Run script
-        run: |
-          echo "${{ inputs.script }}"
-          # adb logcat -c
-          # touch app/emulator.log
-          # chmod 777 app/emulator.log
-          # adb logcat com.example.breach.app >> app/emulator.log &
-          # ./gradlew installDebug
-          # ./gradlew :app:installDebugAndroidTest
-          # adb shell pm list instrumentation
-          # adb shell am instrument -w -e class com.example.breach.ExampleInstrumentedTest com.example.breach.test/androidx.test.runner.AndroidJUnitRunner
-          # # sleep 30
+        run: echo "${{ inputs.script }}"
 
       - name: Upload logs
         uses: actions/upload-artifact@v2
