--- a/.github/actions/launch_emulator/action.yml
+++ b/.github/actions/launch_emulator/action.yml
@@ -74,7 +74,7 @@ runs:
 
 
       - name: Run script
-        run: echo "${{ inputs.script }}"
+        run: bash -c "${{ inputs.script }}"
         shell: bash
 
       - name: Upload logs
