--- a/.licenserc.json
+++ b/.licenserc.json
@@ -1,6 +1,6 @@
 {
-  "*.java": "/* Copyright 2019 Foo. All rights reserved. MIT license.\n * Test",
-  "*.yml": "#  Copyright 2019 Foo. All rights reserved. MIT license.",
+  "*/*.java": "/* Copyright 2019 Foo. All rights reserved. MIT license.\n * Test",
+  "*/*.yml": "#  Copyright 2019 Foo. All rights reserved. MIT license.",
   "*.gradle": "// Copyright 2019 Foo. All rights reserved. MIT license.",
   "ignore": [
     "test/",
