--- a/.licenserc.json
+++ b/.licenserc.json
@@ -4,6 +4,6 @@
   "*.gradle": "// Copyright 2019 Foo. All rights reserved. MIT license.",
   "ignore": [
     "*/breach/*",
-    "*/test-app/"
+    "*/test-app/*"
   ]
 }
