--- a/.licenserc.json
+++ b/.licenserc.json
@@ -3,7 +3,7 @@
   "**/*.yml": "#  Copyright 2019 Foo. All rights reserved. MIT license.",
   "**/*.gradle": "// Copyright 2019 Foo. All rights reserved. MIT license.",
   "ignore": [
-    "test/*/breach/",
+    "test/java/com/example/breach/",
     "test-app/"
   ]
 }
