--- a/.github/actions/check_license/action.yml
+++ b/.github/actions/check_license/action.yml
@@ -45,7 +45,7 @@ runs:
 
           # Append each excluded path to the expression
           for path in "${excluded_paths[@]}"; do
-            exclude_expr+=" -path \"*/$path*\" -o"
+            exclude_expr+=" -path \"$path\" -o"
           done
 
           # Remove the last -o
