--- a/.licenserc.json
+++ b/.licenserc.json
@@ -1,9 +1,10 @@
 {
-  "*.java": "/*\n * Copyright 2019 Foo.\n * All rights reserved.\n * test",
-  "*.yml": "#  Copyright 2019 Foo. All rights reserved. MIT license.",
-  "*.gradle": "// Copyright 2019 Foo. All rights reserved. MIT license.",
+  "*.java": "/*\n * Copyright (c) LinkedIn Corporation.\n * All rights reserved.\n *\n * This source code is licensed under the license found in the\n * LICENSE file in the root directory of this source tree.",
+  "*.gradle": "/*\n * Copyright (c) LinkedIn Corporation.\n * All rights reserved.\n *\n * This source code is licensed under the license found in the\n * LICENSE file in the root directory of this source tree.",
+  "*.py": "# Copyright (c) LinkedIn Corporation.\n# All rights reserved.\n#\n# This source code is licensed under the license found in the\n# LICENSE file in the root directory of this source tree.",
+  "*.yml": "# Copyright (c) LinkedIn Corporation.\n# All rights reserved.\n#\n# This source code is licensed under the license found in the\n# LICENSE file in the root directory of this source tree.",
   "ignore": [
-    "*/main/*/breach/*",
+    "*/test/*",
     "*/test-app/*"
   ]
 }
