--- a/gradle/modules.gradle
+++ b/gradle/modules.gradle
@@ -1,3 +1,11 @@
+/*
+ * Copyright (c) test Corporation.
+ * All rights reserved.
+ *
+ * This source code is licensed under the license found in the
+ * LICENSE file in the root directory of this source tree.
+ */
+
 apply plugin: 'jacoco'
 
 jacoco {
