--- a/.github/workflows/alternate_license.yml
+++ b/.github/workflows/alternate_license.yml
@@ -1,5 +1,8 @@
-#  Copyright 2019 Foo.
-# All rights reserved. MIT license.
+# Copyright (c) test Corporation.
+# All rights reserved.
+#
+# This source code is licensed under the license found in the
+# LICENSE file in the root directory of this source tree.
 name: Check license alternate
 
 on: 
