--- a/.github/actions/check_license/action.yml
+++ b/.github/actions/check_license/action.yml
@@ -66,13 +66,19 @@ runs:
           echo "key: $key"
           echo "value: $value"
           for file in $files; do
-            
-            if grep -qF "$value" "$file"; then
+            if diff -q <(echo "$value") "$file" > /dev/null; then
               echo -e "$file ... ${GREEN}ok"
             else
               has_files_without_license=true
               echo -e "$file ${RED}missing copyright!"
             fi
+            
+            # if grep -qF "$value" "$file"; then
+            #   echo -e "$file ... ${GREEN}ok"
+            # else
+            #   has_files_without_license=true
+            #   echo -e "$file ${RED}missing copyright!"
+            # fi
           done
         done
 
