--- a/.github/actions/check_license/action.yml
+++ b/.github/actions/check_license/action.yml
@@ -1,3 +1,9 @@
+# Copyright (c) LinkedIn Corporation.
+# All rights reserved.
+#
+# This source code is licensed under the license found in the
+# LICENSE file in the root directory of this source tree.
+
 name: 'Check license in files'
 description: 'Checks if required license is present in files'
 
