--- a/.github/actions/check_license/action.yml
+++ b/.github/actions/check_license/action.yml
@@ -1,4 +1,4 @@
-# Copyright (c) LinkedIn Corporation.
+# Copyright (c) test Corporation.
 # All rights reserved.
 #
 # This source code is licensed under the license found in the
