--- a/.github/actions/check_license/action.yml
+++ b/.github/actions/check_license/action.yml
@@ -72,7 +72,7 @@ runs:
           echo "key: $key"
           echo "value: $value"
           for file in $files; do
-            if cat "$file" | grep -qF "$value"; then
+            if cat "$file" | grep "$value"; then
               echo -e "$file ... ${GREEN}ok"
             else
               has_files_without_license=true
