--- a/.github/actions/check_license/action.yml
+++ b/.github/actions/check_license/action.yml
@@ -66,13 +66,11 @@ runs:
           shopt -s globstar  # Enable globstar if not enabled already
           files=$(eval "$find_command")
             
-          # files=$(find . -type f -name "$key" -not \( -path "*/test/*" -o -path "*/app/*" \))
-            
           value=$(echo "$content" | jq -r --arg key "$key" '.[$key]')
           echo "key: $key"
           echo "value: $value"
           for file in $files; do
-            if cat "$file" | grep -q "$value"; then
+            if cat "$file" | grep -qxE "$value"; then
               echo -e "$file ... ${GREEN}ok"
             else
               has_files_without_license=true
