--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -18,7 +18,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Check license
-        uses: ./.github/actions/check_license
+        run: |
+          chmod +x ./.github/scripts/check_license.py
+          python3 ./.github/scripts/check_license.py
+
+      # - name: Check license
+      #   uses: ./.github/actions/check_license
 
       # - name: get json
       #   run: |
