--- a/.github/workflows/alternate_license.yml
+++ b/.github/workflows/alternate_license.yml
@@ -16,7 +16,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Check license
-        uses: ./.github/actions/check_license_alternate
+        run: |
+          chmod +x ./.github/scripts/check_license_alternate.py
+          python3 ./.github/scripts/check_license_alternate.py
+
+      # - name: Check license
+      #   uses: ./.github/actions/check_license_alternate
 
       # - name: get json
       #   run: |
