--- a/.licenserc.json
+++ b/.licenserc.json
@@ -2,9 +2,5 @@
   "*.java": "/*\n * Copyright (c) test Corporation.\n * All rights reserved.\n *\n * This source code is licensed under the license found in the\n * LICENSE file in the root directory of this source tree.",
   "*.gradle": "/*\n * Copyright (c) test Corporation.\n * All rights reserved.\n *\n * This source code is licensed under the license found in the\n * LICENSE file in the root directory of this source tree.",
   "*.py": "# Copyright (c) test Corporation.\n# All rights reserved.\n#\n# This source code is licensed under the license found in the\n# LICENSE file in the root directory of this source tree.",
-  "*.yml": "# Copyright (c) test Corporation.\n# All rights reserved.\n#\n# This source code is licensed under the license found in the\n# LICENSE file in the root directory of this source tree.",
-  "ignore": [
-    "*/test/*",
-    "*/test-app/*"
-  ]
+  "*.yml": "# Copyright (c) test Corporation.\n# All rights reserved.\n#\n# This source code is licensed under the license found in the\n# LICENSE file in the root directory of this source tree."
 }
