--- a/.github/workflows/testing_emulator.yml
+++ b/.github/workflows/testing_emulator.yml
@@ -33,6 +33,6 @@ jobs:
             ./gradlew installDebug
             ./gradlew :app:installDebugAndroidTest
             adb shell pm list instrumentation
-            adb shell am instrument -w -e class com.example.breach.ExampleInstrumentedTest com.example.breach.test/androidx.test.runner.AndroidJUnitRunner
+            adb shell am instrument -w -e class com.example.breach.NewInstrumentedTest com.example.breach.test/androidx.test.runner.AndroidJUnitRunner
             # sleep 30
 
