--- a/.github/actions/launch_emulator/action.yml
+++ b/.github/actions/launch_emulator/action.yml
@@ -26,7 +26,7 @@ runs:
 
       - name: Create Emulator
         id: create_emulator
-        run: avdmanager create avd -n TestAVD -k "system-images;android-30;google_apis_playstore;x86_64"
+        run: echo "no" | avdmanager create avd -n TestAVD -k "system-images;android-30;google_apis_playstore;x86_64"
         shell: bash
 
       - name: Check Emulator Creation Status
