--- a/.github/workflows/testing_emulator.yml
+++ b/.github/workflows/testing_emulator.yml
@@ -35,4 +35,6 @@ jobs:
             adb shell pm list instrumentation
             adb shell am instrument -w -e class com.example.breach.NewInstrumentedTest com.example.breach.test/androidx.test.runner.AndroidJUnitRunner
             # sleep 30
+            time=$(grep "TEST" app/emulator.log)
+            echo "time: $time"
 
