--- a/.github/actions/launch_emulator/action.yml
+++ b/.github/actions/launch_emulator/action.yml
@@ -30,7 +30,7 @@ runs:
 
       - name: Install Sdk
         run: |
-           yes y y y y y | sdkmanager --licenses
+          y y y y y | sdkmanager --licenses
         shell: bash
 
       - name: Check if System Image is Installed
